--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,8 @@
 
 logging.level.br.com.letscode.zoo=DEBUG
 
+logging.level.org.hibernate.SQL=DEBUG
+
 spring.datasource.url=jdbc:h2:mem:zoodb
 spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=sa
